--- a/AvaloniaApplication1/MainWindow.axaml
+++ b/AvaloniaApplication1/MainWindow.axaml
@@ -2,34 +2,48 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="1600" d:DesignHeight="900"
         x:Class="AvaloniaApplication1.MainWindow"
-        Title="AvaloniaApplication1" Width="1600" Height="900" WindowStartupLocation="CenterScreen">
+        Title="AvaloniaApplication1" WindowStartupLocation="CenterScreen">
     <Grid>
         <TabControl>
             <TabItem Header="Пользователи">
                 <Grid Margin="0">
-                    <DataGrid Name="UsersList" Width="1500" Height="500" HorizontalAlignment="Center"
-                              VerticalAlignment="Center" BorderBrush="Black" BorderThickness="10"
-                              IsReadOnly="True" AutoGenerateColumns="False" Foreground="Black">
+                    <DataGrid Name="UsersList" Width="1300" Height="600" HorizontalAlignment="Center"
+                              VerticalAlignment="Center" IsReadOnly="True" AutoGenerateColumns="False"
+                              DoubleTapped="UsersListOnDoubleTapped">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding Fio}" Header="ФИО" Width="*" Foreground="Black" />
-                            <DataGridTextColumn Binding="{Binding DateOfBirth}" Header="Дата рождения" Width="*"
-                                                Foreground="Black" />
-                            <DataGridTextColumn Binding="{Binding PhoneNumber}" Header="Номер телефона" Width="*"
-                                                Foreground="Black" />
-                            <DataGridTextColumn Binding="{Binding Address}" Header="Адрес проживания" Width="*"
-                                                Foreground="Black" />
-                            <!-- <DataGridTextColumn Binding="{Binding Country.Name}" Header="Адрес проживания" Width="*"/> -->
-                            <!-- <DataGridTemplateColumn Width="*"> -->
-                            <!--     <DataTemplate> -->
-                            <!--         <Button Content="Перейти" Click="UsersListClick"/> -->
-                            <!--     </DataTemplate> -->
-                            <!-- </DataGridTemplateColumn> -->
+                            <DataGridTextColumn Binding="{Binding Fio}" Header="ФИО" Width="*" />
+                            <DataGridTextColumn Binding="{Binding DateOfBirth}" Header="Дата рождения" Width="0.5*" />
+                            <DataGridTextColumn Binding="{Binding PhoneNumber}" Header="Номер телефона" Width="0.5*" />
+                            <DataGridTextColumn Binding="{Binding Address}" Header="Адрес проживания" Width="*" />
+                            <DataGridTextColumn Binding="{Binding IdcountryNavigation.Name}" Header="Адрес проживания"
+                                                Width="*" />
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button Content="Добавить" Width="200" MaxWidth="100" HorizontalContentAlignment="Center"
-                            HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,50" />
+                    <Button Content="Добавить" Width="100" Height="30" HorizontalAlignment="Center"
+                            VerticalAlignment="Bottom" Margin="50" HorizontalContentAlignment="Center"
+                            Click="AddUserButtonClick" />
+                    <Label Name="UserCheque" Width="500" Height="30" HorizontalAlignment="Center"
+                           VerticalAlignment="Top" Margin="0" HorizontalContentAlignment="Center" BorderBrush="Black"
+                           BorderThickness="1" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="Страны">
+                <Grid>
+                    <DataGrid Name="CountriesList" Width="1300" Height="600" HorizontalAlignment="Center"
+                              VerticalAlignment="Center" IsReadOnly="True" AutoGenerateColumns="False"
+                              DoubleTapped="CountriesListOnDoubleTapped">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Name}" Header="Название" Width="*" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Button Content="Добавить" Width="100" Height="30" HorizontalAlignment="Center"
+                            VerticalAlignment="Bottom" Margin="50" HorizontalContentAlignment="Center"
+                            Click="AddCountryButtonClick" />
+                    <Label Name="CountryCheque" Width="500" Height="30" HorizontalAlignment="Center"
+                           VerticalAlignment="Top" Margin="0" HorizontalContentAlignment="Center" BorderBrush="Black"
+                           BorderThickness="1" />
                 </Grid>
             </TabItem>
         </TabControl>
