--- a/AvaloniaApplication1/ModifyUserWindow.axaml
+++ b/AvaloniaApplication1/ModifyUserWindow.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="1600" d:DesignHeight="900"
         x:Class="AvaloniaApplication1.ModifyUserWindow"
         Title="ModifyUserWindow" WindowStartupLocation="CenterScreen">
     <Grid>
@@ -24,8 +24,8 @@
                    VerticalAlignment="Center" Margin="0,0,0,70" HorizontalContentAlignment="Center"
                    VerticalContentAlignment="Center" BorderThickness="1" BorderBrush="Black" />
             <TextBox Grid.Column="0" Grid.Row="0" Name="FioBox" Width="700" Height="30" HorizontalAlignment="Center"
-                   VerticalAlignment="Center" Margin="0" HorizontalContentAlignment="Center" BorderThickness="1"
-                   BorderBrush="Black" />
+                     VerticalAlignment="Center" Margin="0" HorizontalContentAlignment="Center" BorderThickness="1"
+                     BorderBrush="Black" />
 
             <Label Grid.Column="1" Grid.Row="0" Content="Дата рождения" HorizontalAlignment="Center"
                    VerticalAlignment="Center" Margin="0,0,0,70" HorizontalContentAlignment="Center"
@@ -51,12 +51,23 @@
             <Label Grid.Column="0" Grid.Row="2" Content="Страна" HorizontalAlignment="Center"
                    VerticalAlignment="Center" Margin="0,0,0,70" HorizontalContentAlignment="Center"
                    VerticalContentAlignment="Center" BorderThickness="1" BorderBrush="Black" />
-            <TextBox Grid.Column="0" Grid.Row="2" Name="CountryBox" Width="700" Height="30"
-                     HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0"
-                     HorizontalContentAlignment="Center" BorderThickness="1" BorderBrush="Black" />
-        </Grid>
+            <ComboBox Grid.Column="0" Grid.Row="2" Name="CountryBox" Width="700" Height="30"
+                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0"
+                      HorizontalContentAlignment="Center" BorderThickness="1" BorderBrush="Black">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}" TextAlignment="Center"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
 
-        <Button Content="Сохранить" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                Margin="30" HorizontalContentAlignment="Center" Click="SaveButtonClick" />
+            <Button Grid.Column="0" Grid.Row="2" Content="Удалить" Width="100" Height="30" HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom" Margin="30" HorizontalContentAlignment="Center"
+                    Click="DeleteButtonClick" />
+
+            <Button Grid.Column="1" Grid.Row="2" Content="Сохранить" Width="100" Height="30"
+                    HorizontalAlignment="Center" VerticalAlignment="Bottom"
+                    Margin="30" HorizontalContentAlignment="Center" Click="SaveButtonClick" />
+        </Grid>
     </Grid>
 </Window>
